--- a/flask-site/app/templates/index.html
+++ b/flask-site/app/templates/index.html
@@ -7,13 +7,16 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <script src="https://unpkg.com/htmx.org@1.5.0"></script>
+        
     </head>
 
     <body>
 
+            <br>
+
         <div class="jumbotron text-center">
             <h2>Careless Response Detection</h2>
-            <p>Using machine learning to detect carelessness in survey data</p>
+            <p>Using machine learning to detect carelessness in survey data and AWS</p>
         </div>
 
         <div class="container">
@@ -83,6 +86,7 @@
                     </form>
 
             </div>
+        
             
             <br>
             <br>
@@ -91,7 +95,7 @@
             </div>
             <p id="cr-result"></p>
             
-            </div>
+            
 
             <!-- this section can be replaced by a child document -->
             {% block body %}
@@ -102,7 +106,9 @@
 
             {% endblock %}
         </div>
+    </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        
     </body>
 </html>
